--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ footer {
     cursor: pointer;
     background: var(--secondary); /* fond derrière les trois barres */
     border: none;                 /* enlève le gris par défaut */
+    padding: 8px 20px;      /* 8px vertical, 20px horizontal */
     border-radius: 5px;           /* arrondi du fond */
     z-index: 1000;                /* pour être au-dessus du contenu */
 }
